--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,13 +13,13 @@
   <div class="main-container">
     <div class="aside">
       <div class="logo">
-        <a href="#"><span>A</span>tlas</a>
+        <a href="#"><span>J</span>ay</a>
       </div>
       <div class="nav-toggler">
         <span></span>
       </div>
       <ul class="nav">
-        <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="#home"><i class="fa fa-home"></i>Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
         <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
       </ul>
@@ -31,8 +31,10 @@
             <div class="home-info padd-15">
               <h3 class="hello">Hello,my name is <span class="name">Jay Huang</span></h3>
               <h3 class="my-profession">I want to be a <span class="typing"></span><h3 class="my-profession">  Front-End Developer !</h3></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ea commodi voluptatibus quisquam dolorum explicabo dicta placeat magnam nesciunt odit ipsam assumenda nemo maiores exercitationem cum amet, alias voluptatem ipsum!</p>
-              <a href="#contact" class="btn hire-me">More About Me</a>
+              <p>
+                我畢業於應用日語學系，四年日文的學習不是使我立志前往日本工作，而是讓我決定想要成為一名前端工程師...
+              </p>
+              <a href="#about" class="btn hire-me">More About Me</a>
             </div>
             <div class="home-img padd-15">
               <img src="photo/07441231-1.jpg">
@@ -52,7 +54,11 @@
               <div class="row">
                 <div class="about-text padd-15">
                   <h3>I'm Jay Huang , My dream is to be a  <span>Front-End Developer !</span></h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dicta nostrum. Illum voluptas minus nesciunt, dicta tempora consequatur quia placeat ea officiis cum impedit veritatis repellat corrupti, autem recusandae dolor.</p>
+                  <p>
+                    <h3>想成為前端工程師的原因:</h3>
+                    在大學期間，我先後在服務業與餐飲業中工作，但我發現儘管我已經有著兩年的工讀經驗，但是當我去到另一間新的店的時候，所有的事情全部都要重新開始累積，我沒有辦法將我在上一家店中所學到的事情帶到下一個地方去，這件事情讓我覺得很徬徨，如果我永遠都在這樣的領域中工作，那麼未來我年紀更大了，會不會沒有保障?<br>
+                    有了這個擔憂之後，我開始嘗試透過自學、旁聽其他系所課程，想讓自己掌握另外一門技能，但我嘗試了許多領域，都無法堅持超過兩周。但是在大約三個月前，我偶然點進了Youtube上的一部html初學影片，照著影片上的步驟慢慢敲出我的第一個網頁。從那時候開始，我就被前端領域給吸引，在這個地方，我能夠發揮我自己的想法，透過嘗試、失敗、最終終於成功達成目標，讓我感受到莫大的成就感與滿足感。除此之外，若是我將來能成功轉職成為前端工程師，那麼我的經驗與閱歷也得以被累積，正是因為這些原因，使我下定決心想要成為前端工程師的一員。
+                  </p>
                 </div>
               </div>
               <div class="row">
@@ -84,39 +90,95 @@
                         <div class="time-item">
                           <div class="timecircle-dot"></div>
                             <h3 class="time-date">
-                              <i class="fa fa-calendar">
-                                  2018 / 9 - 2022 / 6
+                              <i class="fa fa-calender">
+                                  第一次寫網頁
                               </i>
                             </h3>
                             <h4 class="time-title">
-                              Department of Applied Japanese
+                              首次體驗到前端的樂趣
                             </h4>
-                            <p class="time-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nulla soluta tenetur voluptates sunt eligendi tempore, esse nesciunt numquam fuga consequuntur. Repellendus modi officia quod dicta magni facilis ducimus consectetur.</p>
+                            <p class="time-text">下圖是我首次自己利用VS Code寫出的網頁，雖然整體架構非常簡單(醜陋)，但對於當時的我而言，仍然感受到了滿滿的成就感。</p>
+                            <div class="img">
+                            <img src="photo/第一次寫網頁.png" class="">
+                            <p>圖1 / 第一次撰寫的網頁</p>
+                            </div>
                         </div>
                         <div class="time-item">
                           <div class="timecircle-dot"></div>
                               <h3 class="time-date">
-                                <i class="fa fa-calendar">
-                                    2018 / 9 - 2022 / 6
+                                <i class="fa fa-calender">
+                                  開始練習刻版
+                              </i>
+                            </h3>
+                            <h4 class="time-title">
+                              我待刻板如初戀，它卻傷我千百遍
+                            </h4>
+                            <p class="time-text">在學習了html、css約一個月後，為了驗證學習的成果，我開始試著在網路上尋找模板並復刻它。<br>
+                              但讓我傷心的是...每當我輸入完一連串code，信心滿滿的儲存、按下重新整理，想著這次一定是和範例一模一樣!卻又會發現畫面長的跟我想像的完全不一樣，因此在練習的過程中我總是重複吶喊著一句話:「為什麼我的畫面跟他長得不一樣!!!!!!」  
+                            </p>
+                            <div class="img">
+                            <img src="photo/練習刻板的過程.png" class="">
+                            <p>圖2 / 終於大致完成的練習作品</p>
+                          </div>
+                        </div>
+                          <div class="time-item">
+                            <div class="timecircle-dot"></div>
+                                <h3 class="time-date">
+                                  <i class="fa fa-calender">
+                                    開始學習前端框架
                                 </i>
                               </h3>
                               <h4 class="time-title">
-                                Department of Applied Japanese
+                                要寫React，我二話不說就是拆Components!
                               </h4>
-                              <p class="time-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nulla soluta tenetur voluptates sunt eligendi tempore, esse nesciunt numquam fuga consequuntur. Repellendus modi officia quod dicta magni facilis ducimus consectetur.</p>
+                              <p class="time-text">
+                              由於打開求職網站，所需要掌握的技術幾乎都是Vue、React、Angular，所以我勢必要掌握至少一種框架才行。<br>
+                              而我這個連JavaScript都還不太熟悉的人決定先開始學習React，當時的我認為它的學習難度是比較高的，如果我連React都能掌握，別說是JavaScript了，Vue和Angular豈不是手到擒來?!<br>
+                              ...但好高騖遠的代價就是我頭髮都快抓禿了，VS Code終端機和網頁的console還是不斷輸出各種Error。<br>經過了約一個月的時間，我逐漸習慣React組件式的編寫方式，在下手寫Code之前，我會先思考如何去拆解Components會是最合理的。<br>
+                              </p>
+                              <div class="img">
+                              <img src="photo/react目錄.png" id="react">
+                              <p>圖3 / 答應我，下次要分別給我們一個家...</p>
+                              </div>
                           </div>
                           <div class="time-item">
                             <div class="timecircle-dot"></div>
                                 <h3 class="time-date">
-                                  <i class="fa fa-calendar">
-                                      2018 / 9 - 2022 / 6
-                                  </i>
-                                </h3>
-                                <h4 class="time-title">
-                                  Department of Applied Japanese
-                                </h4>
-                                <p class="time-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nulla soluta tenetur voluptates sunt eligendi tempore, esse nesciunt numquam fuga consequuntur. Repellendus modi officia quod dicta magni facilis ducimus consectetur.</p>
-                              </div>
+                                  <i class="fa fa-calender">
+                                    版本控制?那是什麼?
+                                </i>
+                              </h3>
+                              <h4 class="time-title">
+                                初嘗Git、Github的使用
+                              </h4>
+                              <p class="time-text">
+                                對於一個工程師來說，如何保管資料是一件非常重要的事情。我一直以來都是把檔案丟上Google雲端備份，但每一次都要重複「登入雲端 -> 選擇資料夾 -> 手動拖曳檔案上傳 ->備份完成」的步驟實在太累人，於是我開始研究在工程師圈子中的明星 -- Git的使用。<br>
+                                學習Git大約一周的時間(撰寫文章時間2022/06/21)，現在能夠把檔案push上Github以及pull下來，大大縮短了我備份資料所需的時間。希望未來能有機會學習到如何使用Git實現多人協作和學習版本控制。
+                              </p>
+                              <div class="img">
+                              <img src="photo/git.png" class="">
+                              <p>圖4 / 搭配Sourcetree，檔案管理更容易</p>
+                            </div>
+                          </div>
+                          <div class="time-item">
+                            <div class="timecircle-dot"></div>
+                                <h3 class="time-date">
+                                  <i class="fa fa-calender">
+                                    對於未來的規劃
+                                </i>
+                              </h3>
+                              <h4 class="time-title">
+                                合理安排學習進度，逐步踏實
+                              </h4>
+                              <p class="time-text">
+                                回頭檢視我的學習歷程，發現我學習的內容非常凌亂，東學一個西學一個，若是想要好好的掌握前端工程師的必備技能們，如何擬訂計畫並執行就非常重要。<br>
+                                我目前的學習方向是以更熟悉掌握JavaScript為主，學習前端到現在約三個月的時間，其實對於JS的掌握還非常粗淺，在練習製作<a href="image.png">TodoList</a>時思考該使用哪些函式就花了我非常多的時間，未來藉由從製作各類小作品來讓我能慢慢熟悉、掌握JavaScript。<br>
+                                而切版的技巧、React的學習每周同樣也不會耽誤，並不會完全放下不練習，畢竟動手實踐，才能讓腦袋真正記住它們。
+                              </p>
+                              <div class="img">
+                              <img src="photo/JavaScript-logo-e1429828695235-1280x720.png" class="">
+                              <p>圖5 / 希望有天能夠從容自在的撰寫JavaScript</p>
+                            </div>
                           </div>
                         </div>
                       </div>
