--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -206,7 +206,7 @@
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
                   <h2>TodoList JS</h2>
-                  <h4 class="title-Js">使用純Js撰寫，並使用localStorage儲存資料</h4>
+                  <h4 class="title-Js">使用Js撰寫，並使用localStorage儲存資料</h4>
                   <h4 class="lg">-點擊圖片跳轉至實際應用畫面-</h4>
                   <a href="https://jim-chieh.github.io/index.html?fbclid=IwAR311ujoLWFoUzHIDD1RdD7A7NgfG6iZq446G9kRAmil50upmKxyaiC2zqY" target="_blank"><h4 class="sm">-點我跳轉至實際應用畫面-</h4></a>
                   <a href="https://github.com/Jim-chieh/todolist" target="_blank"><h3>-Github Page-</h3></a>
@@ -220,7 +220,7 @@
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
                   <h2>Stop Watch</h2>
-                  <h4 class="title">使用純Js撰寫，藉此練習選擇器與事件綁定的應用</h4>
+                  <h4 class="title">使用Js撰寫，藉此練習選擇器與事件綁定的應用</h4>
                   <h4 class="lg">-點擊圖片跳轉至實際應用畫面-</h4>
                   <a href="https://jim-chieh.github.io/stopwatch/stopwatch.html" target="_blank"><h4 class="sm">-點我跳轉至實際應用畫面-</h4></a>
                   <a href="https://github.com/Jim-chieh/todolist" target="_blank"><h3>-Github Page-</h3></a>
