--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,7 +21,7 @@
       <ul class="nav">
         <li><a href="#home"><i class="fa fa-home"></i>Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-        <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+        <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Projects</a></li>
       </ul>
     </div>
     <div class="main-content">
@@ -32,7 +32,7 @@
               <h3 class="hello">Hello,my name is <span class="name">Jay Huang</span></h3>
               <h3 class="my-profession">I want to be a <span class="typing"></span><h3 class="my-profession">  Front-End Developer !</h3></h3>
               <p>
-                我畢業於應用日語學系，四年日文的學習不是使我立志前往日本工作，而是讓我決定想要成為一名前端工程師...
+                我畢業於應用日語學系，四年日文的學習不是使我立志前往日本工作，而是讓我決定成為一名前端工程師...
               </p>
               <a href="#about" class="btn hire-me">More About Me</a>
             </div>
@@ -54,10 +54,13 @@
               <div class="row">
                 <div class="about-text padd-15">
                   <h3>I'm Jay Huang , My dream is to be a  <span>Front-End Developer !</span></h3>
+                  <h3>想成為前端工程師的原因:</h3>
                   <p>
-                    <h3>想成為前端工程師的原因:</h3>
-                    在大學期間，我先後在服務業與餐飲業中工作，但我發現儘管我已經有著兩年的工讀經驗，但是當我去到另一間新的店的時候，所有的事情全部都要重新開始累積，我沒有辦法將我在上一家店中所學到的事情帶到下一個地方去，這件事情讓我覺得很徬徨，如果我永遠都在這樣的領域中工作，那麼未來我年紀更大了，會不會沒有保障?<br>
-                    有了這個擔憂之後，我開始嘗試透過自學、旁聽其他系所課程，想讓自己掌握另外一門技能，但我嘗試了許多領域，都無法堅持超過兩周。但是在大約三個月前，我偶然點進了Youtube上的一部html初學影片，照著影片上的步驟慢慢敲出我的第一個網頁。從那時候開始，我就被前端領域給吸引，在這個地方，我能夠發揮我自己的想法，透過嘗試、失敗、最終終於成功達成目標，讓我感受到莫大的成就感與滿足感。除此之外，若是我將來能成功轉職成為前端工程師，那麼我的經驗與閱歷也得以被累積，正是因為這些原因，使我下定決心想要成為前端工程師的一員。
+                    大學期間，我一直都在服務業中打工，本來我認為在畢業之後，我也同樣會在這個領域工作。但當我離開這家店，去到下一家店打工時，我發現儘管我當時已經有兩年的工讀經驗，可是當我去到另一個環境的時候，所有的事情卻都要重新累積，我幾乎沒有辦法將我在上一家店中所學到的事情帶過來。這件事情讓我覺得很徬徨:「如果我永遠都在這樣的領域中工作，那麼未來我年紀更大了，會不會沒有保障?」<br>
+                    心中有了這個擔憂之後，我開始嘗試透過自學、旁聽其他系所課程，想讓自己掌握另外一門技能，但我嘗試了許多學科，卻都提不起幹勁學習，彷彿自己好像沒有其他興趣一樣。不過在大約三個月前，我偶然點進了Youtube上的一部html初學影片，照著影片上的步驟慢慢敲出我的第一個網頁，看著一個網頁在我手上從零開始慢慢成形，也讓我萌生出了「總有一天我也要寫出屬於我自己的網站」的夢想。
+                    隨著自學到現在大約三個月的時間，我在前端領域中感受到了學習其他學科時所沒感受過的成就感、滿足感。不僅如此，在這個行業當中，我的經驗與閱歷也得以被累積，不會輕易就被拋棄。<br>
+                    正是因為這些原因，讓我下定決心想要成為前端工程師的一員!
+
                   </p>
                 </div>
               </div>
@@ -114,7 +117,7 @@
                               我待刻板如初戀，它卻傷我千百遍
                             </h4>
                             <p class="time-text">在學習了html、css約一個月後，為了驗證學習的成果，我開始試著在網路上尋找模板並復刻它。<br>
-                              但讓我傷心的是...每當我輸入完一連串code，信心滿滿的儲存、按下重新整理，想著這次一定是和範例一模一樣!卻又會發現畫面長的跟我想像的完全不一樣，因此在練習的過程中我總是重複吶喊著一句話:「為什麼我的畫面跟他長得不一樣!!!!!!」  
+                              但讓我傷心的是...每當我輸入完一連串code，信心滿滿的儲存、按下重新整理，想著這次一定是和範例一模一樣!結果都會發現畫面長的跟我想像的完全不同，因此在練習的過程中我總是重複吶喊著一句話:「為什麼我的畫面跟他長得不一樣!!!!!!」  
                             </p>
                             <div class="img">
                             <img src="photo/練習刻板的過程.png" class="">
@@ -192,12 +195,11 @@
         <div class="container" id="portfolio">
           <div class="row">
             <div class="section-title padd-15">
-              <h2>Portfolio</h2>
+              <h2>Projects</h2>
             </div>
           </div>
           <div class="row">
             <div class="portfolio-heading">
-              <h2>My Projects :</h2>
             </div>
           </div>
           <div class="row-portfolio">
@@ -206,7 +208,7 @@
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
                   <h2>TodoList JS</h2>
-                  <h4 class="title-Js">使用Js撰寫，並使用localStorage儲存資料</h4>
+                  <h4 class="title-Js">使用純Js撰寫，並使用localStorage儲存資料</h4>
                   <h4 class="lg">-點擊圖片跳轉至實際應用畫面-</h4>
                   <a href="https://jim-chieh.github.io/index.html?fbclid=IwAR311ujoLWFoUzHIDD1RdD7A7NgfG6iZq446G9kRAmil50upmKxyaiC2zqY" target="_blank"><h4 class="sm">-點我跳轉至實際應用畫面-</h4></a>
                   <a href="https://github.com/Jim-chieh/todolist" target="_blank"><h3>-Github Page-</h3></a>
@@ -220,7 +222,7 @@
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
                   <h2>Stop Watch</h2>
-                  <h4 class="title">使用Js撰寫，藉此練習選擇器與事件綁定的應用</h4>
+                  <h4 class="title">使用純Js撰寫，藉此練習選擇器與事件綁定的應用</h4>
                   <h4 class="lg">-點擊圖片跳轉至實際應用畫面-</h4>
                   <a href="https://jim-chieh.github.io/stopwatch/stopwatch.html" target="_blank"><h4 class="sm">-點我跳轉至實際應用畫面-</h4></a>
                   <a href="https://github.com/Jim-chieh/todolist" target="_blank"><h3>-Github Page-</h3></a>
@@ -247,7 +249,7 @@
             <div class="portfolio-item padd-15">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                <h2 class="wait">Please wait for update...</h2> 
+                <h2 class="wait">More Projects Coming Soon...</h2> 
                 </div> 
                 <img class="last" src="photo/carbon_pattern.png" alt="">
               </div>
